styles.css
body {
    background-color:#000000;
    background-image: url("https://pararium.com/wp-content/uploads/imgs/9/6/96227d63.gif");
    color: whitesmoke;
}

.center {
    text-align: center;
}

.stickyInfo {
    position:sticky; 
    bottom:10px; 
    text-align:center;
}

.rotationX {
    transform: rotateX(360deg);
}

.rotationY {
    transform: rotateY(360deg);
}

.block1, .block2, .block3, .block4 {
    padding-top:30px;
    text-align:center;
    font-weight: bold;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
}

.block1 {
    height:50px; 
    background-color:#B3B3B3;
    color:black;
}

.block2 {
    height:100px; 
    color: whitesmoke;
}

.block3 {
    height:50px;
    width:49%;
    display:inline-block;
    background-color:#B3B3B3;
    color:black;
}

.block4 {
    height:50px;
    width:49%;
    display:inline-block;
    background-color:whitesmoke;
    color:#23272a;
}

.data_input {
    border: 1px dotted whitesmoke;
    padding: 2px;
}

.mobile-filler {
    height: 0;
}

@media (pointer:coarse) { /*inaccurate pointing device - here: detect touchscreen*/
    .mobile-filler {
        height: 70%;
    }
}

